--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,11 @@ code {
 	--midnight-navy: #102a4d;
 } */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root{
   --Yellow:#F1C40F;
   --Black: #000;
@@ -35,7 +40,7 @@ code {
   --Light_Grey:#F9F8FE
   --radius: 12px;
   --shadow: 0 8px 30px rgba(0, 0, 0, 0.04);
-      background: linear-gradient(to right, #fffdf6, #fdf7e9);
+      background: #fff8f8;
       overflow-x: hidden;
 
 }
