--- a/src/Pages/CSS/signup.css
+++ b/src/Pages/CSS/signup.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   background: #FFFFFF;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 /* Background blur effect */
