--- a/src/Components/RiskDashboard/RiskDashboard.css
+++ b/src/Components/RiskDashboard/RiskDashboard.css
@@ -107,13 +107,13 @@
 .avatar {
   width: 48px; height: 48px;
   border-radius: 9999px;
-  background: #e5e7eb;
+  /* background: #e5e7eb; */
 }
 .client-name { font-weight: 500; color: #1f2937; font-size: 1.125rem; }
 .device {
   font-size: .75rem;
   color: #6b7280;
-  background: #e5e7eb;
+  /* background: #e5e7eb; */
   padding: .25rem .5rem;
   border-radius: 4px;
   width: fit-content;
@@ -141,7 +141,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 12px 16px;
-  background: #f8f9fa;
+  /* background: #f8f9fa; */
   border-radius: 8px;
   border: 2px solid transparent;
   width: 100%;
@@ -159,7 +159,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #e5e7eb;
+  /* background: #e5e7eb; */
   color: #6b7280;
 }
 .dashboard-top-section {
